[gd_scene load_steps=2 format=3 uid="uid://bd223umgu38if"]

[ext_resource type="Script" uid="uid://drpgqwusi0ohi" path="res://Scripts/main_menu.gd" id="1_28flt"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28flt")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 140
text = "Caravan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = 240.0
offset_right = 1280.0
offset_bottom = 720.0

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Play" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Play"

[node name="BuildDeck" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Build deck"

[node name="Quit" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Quit"

[connection signal="pressed" from="CenterContainer/MainButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/BuildDeck" to="." method="_on_build_deck_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Quit" to="." method="_on_quit_pressed"]
